--- a/SwarmController/Markers/ScanMarker.xaml
+++ b/SwarmController/Markers/ScanMarker.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SwarmController.Markers.DecoyMarker"
+﻿<UserControl x:Class="SwarmController.Markers.ScanMarker"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,6 +6,6 @@
              xmlns:local="clr-namespace:SwarmController.Markers"
              mc:Ignorable="d">
     <Grid>
-        <Image Source="../Resources/decoy2.png" Width="30" Height="30"/>
+        <Image Source="../Resources/pole.png" Width="30" Height="30"/>
     </Grid>
 </UserControl>
